--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Knox Networks - Decentralized Financial Solutions">
-    <meta name="keywords" content="Knox, blockchain, defi, networks, cryptocurrency">
+    <meta name="description" content="Knox Networks - File-Based Digital Assets for Financial Institutions">
+    <meta name="keywords" content="Knox, blockchain, defi, networks, whitepaper, digital assets, stablecoins, blockchains, QUBIC">
     <meta name="author" content="Knox Networks">
     <meta property="og:title" content="Knox Networks">
-    <meta property="og:description" content="KNOX Networks - Decentralized Financial Solutions">
+    <meta property="og:description" content="KNOX Networks - File-Based Digital Assets for Financial Institutions">
     <meta property="og:image" content="assets/logo.png">
     <meta name="robots" content="index, follow">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
@@ -15,6 +16,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p><a href="wp.html" target="_blank">Whitepaper</a></p>
+    <h2>KNOX NETWORKS</h2>
+    <p>Developer of a financial platform designed to support all regulated digital money for financial institutions. The
+        company's platform offers features such as offline transactions and scalability management, analytics for
+        Institutions, transaction, and view file-based programmable money, and more.</p>
+    <ul>
+        <li><a href="/wp/" target="_blank">Whitepaper</a></li>
+        <li><a href="/patent/US20230196347A1.pdf" target="_blank">US20230196347A1</a></li>
+        <li><a href="/x/www.knox-networks.com" target="_blank">Website</a></li>
+        <li><a href="/x/dev.knoxnetworks.io" target="_blank">Docs</a></li>
+    </ul>
+<p>Developer of a financial platform designed to support all regulated digital money for financial institutions.</p>
+<div>
+    <p><strong>Primary Contact</strong></p>
+    <p>Natalya Thakur</p>
+    <p>Founder & Chief Operating Officer</p>
+    <p>nthakur@knox-networks.com</p>
+  </div>
+  <div>
+    <p><strong>Primary Office</strong></p>  
+    <p>New York, NY</p>
+    <p>United States</p>
+    <p>info@knox-networks.com</p>
+  </div>  
+  <div>
+    <h2>Top Patent Technology (CPC codes)</h2>
+    <p>
+      Information and communication technology [ict] specially adapted for administrative,
+      commercial, financial, managerial or supervisory purposes
+    </p>
+  </div>
+  <p><strong>Investor: </strong>National Science Foundation</p>  
+  <p>File-Based Digital Assets for Financial Institutions</p>
 </body>
 </html>
