--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Knox Networks - File-Based Digital Assets for Financial Institutions">
-    <meta name="keywords" content="Knox, blockchain, defi, networks, whitepaper, digital assets, stablecoins, blockchains, QUBIC">
+    <meta name="keywords"
+        content="Knox, blockchain, defi, networks, whitepaper, digital assets, stablecoins, blockchains, QUBIC">
     <meta name="author" content="Knox Networks">
     <meta property="og:title" content="Knox Networks">
     <meta property="og:description" content="KNOX Networks - File-Based Digital Assets for Financial Institutions">
@@ -14,7 +15,9 @@
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <title>KNOX Networks</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://knox-networks.netlify.app/" />
 </head>
+
 <body>
     <h2>KNOX NETWORKS</h2>
     <p>Developer of a financial platform designed to support all regulated digital money for financial institutions. The
@@ -26,27 +29,28 @@
         <li><a href="/x/www.knox-networks.com" target="_blank">Website</a></li>
         <li><a href="/x/dev.knoxnetworks.io" target="_blank">Docs</a></li>
     </ul>
-<p>Developer of a financial platform designed to support all regulated digital money for financial institutions.</p>
-<div>
-    <p><strong>Primary Contact</strong></p>
-    <p>Natalya Thakur</p>
-    <p>Founder & Chief Operating Officer</p>
-    <p>nthakur@knox-networks.com</p>
-  </div>
-  <div>
-    <p><strong>Primary Office</strong></p>  
-    <p>New York, NY</p>
-    <p>United States</p>
-    <p>info@knox-networks.com</p>
-  </div>  
-  <div>
-    <h2>Top Patent Technology (CPC codes)</h2>
-    <p>
-      Information and communication technology [ict] specially adapted for administrative,
-      commercial, financial, managerial or supervisory purposes
-    </p>
-  </div>
-  <p><strong>Investor: </strong>National Science Foundation</p>  
-  <p>File-Based Digital Assets for Financial Institutions</p>
+    <p>Developer of a financial platform designed to support all regulated digital money for financial institutions.</p>
+    <div>
+        <p><strong>Primary Contact</strong></p>
+        <p>Natalya Thakur</p>
+        <p>Founder & Chief Operating Officer</p>
+        <p>nthakur@knox-networks.com</p>
+    </div>
+    <div>
+        <p><strong>Primary Office</strong></p>
+        <p>New York, NY</p>
+        <p>United States</p>
+        <p>info@knox-networks.com</p>
+    </div>
+    <div>
+        <h2>Top Patent Technology (CPC codes)</h2>
+        <p>
+            Information and communication technology [ict] specially adapted for administrative,
+            commercial, financial, managerial or supervisory purposes
+        </p>
+    </div>
+    <p><strong>Investor: </strong>National Science Foundation</p>
+    <p>File-Based Digital Assets for Financial Institutions</p>
 </body>
+
 </html>
