--- a/index.html
+++ b/index.html
@@ -51,6 +51,14 @@
     </div>
     <p><strong>Investor: </strong>National Science Foundation</p>
     <p>File-Based Digital Assets for Financial Institutions</p>
+    <p>
+        Co-Founder and CEO of Knox Networks
+        Bio
+        Natalya Thakur is the Co-Founder and CEO of Knox Networks, a payments infrastructure software that supports the movement of all regulated digital money and securities for large financial institutions. She has served across a variety of financial and technology roles, including experiences at BlackRock, Google[X], Celo, IDEO CoLab, Morgan Stanley, the Hoover Institution, and as co-founder/advisor of Stanford’s Future of Digital Currency Initiative (a partnership with the United Nations). She was appointed to the advisory board for Bretton Woods, and serves on the Future of Finance Working Group. 
+        
+        She is an avid public speaker and angel investor/LP, her work has been featured in Forbes, Wall Street Journal, Fast Company, American Banker, Coindesk, BIS publications amongst others. Her career has led her to work with top industry experts such as Condoleezza Rice, Marty Chavez, Eric Schmidt, Darrell Duffie, David Mazieries, Nick Burns, Gary Gensler, Adrienne Harris, and many other executives from government, technology and finance. 
+        
+        Natalya holds a BA (honors) in International Relations from Stanford University, an MPA from Harvard's Kennedy School, and an MBA from Stanford's Graduate School of Business.</p>
 </body>
 
 </html>
